-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 1
-
cc7d085ca21bff029e1a67b92b4facebfdc51c6f 9b49c0561e0b13caeee462d931dc22008e3c4587
I've noticed this when I started the wrong Creator (wrong version) and hit Ctrl-Q to close it.
Creator 2.6, sha1 2910233.
Based on Qt5, sha1 749b83f.
Preconditions
- Creator restores the last session on startup.
- Last session contains a big project, like qtcreator itself.
How to reproduce
- Start Qt Creator
- As soon as the window gets the focus, hit Ctrl-Q.
The window will close and some seconds later creator crashes.
- replaces
-
QTCREATORBUG-8303 Creator segfaults when holding Ctrl+W down
-
- Closed
-
For Gerrit Dashboard: QTBUG-27595 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
40098,7 | QPAEventDispatcherGlib: Use correct flags when sending events | master | qt/qtbase | Status: MERGED | +2 | 0 |
40129,2 | Handle QEventLoop::ExcludeUserInputEvents in QWindowSystemInterface. | master | qt/qtbase | Status: MERGED | +2 | 0 |